--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@babel/preset-env": "^7.25.3",
     "express": "^4.19.2",
-    "pug": "^3.0.3"
+    "pug": "^3.0.3",
+    "ws": "^8.18.0"
   }
 }
