--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-env": "^7.25.3",
     "express": "^4.19.2",
     "pug": "^3.0.3",
+    "socket.io": "^4.7.5",
     "ws": "^8.18.0"
   }
 }
