--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@babel/preset-env": "^7.25.3",
+    "@socket.io/admin-ui": "^0.5.1",
     "express": "^4.19.2",
     "pug": "^3.0.3",
     "socket.io": "^4.7.5",
